fix #1 for margin of ts and ot logos on mobile

--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,43 @@ img, video, canvas
 .discord:hover{
 	transform: translateY(-10px);
 }
+#dclogo{
+	background-image: url(images/ds_logo.png);
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 80%;
+	height: 80%;
+	padding-top: 5%;
+	display: inline-block;
+	text-indent: -9999px
+}
+#tslogo{
+	background-image: url("images/ts_logo.png");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	position: relative;
+	top: 10%;
+	width: 20%;
+	height: 40%;
+	left: -10%;
+	padding-top: 5%;
+	display: inline-block;
+	text-indent: -9999px;
+}
+#otlogo{
+	background-image: url("images/ot_logo.png");
+	background-size: 100%;
+	background-repeat: no-repeat;
+	position: relative;
+	top: 10%;
+	width: 20%;
+	height: 40%;
+	left: 10%;
+	padding-top: 5%;
+	display: inline-block;
+	text-indent: -9999px;
+}
 @media (max-width: 992px) and (orientation: portrait) {
 	.outfit{
 		top: 7%;
@@ -127,41 +164,12 @@ img, video, canvas
 	.discord:hover{
 		transform: translateY(-20px);
 	}
+	#tslogo{
+		margin-top: 5%;
+	}
+	#otlogo{
+		margin-top: 5%;
+	}
 }
-#dclogo{
-	background-image: url(images/ds_logo.png);
-	background-size: 80%;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 80%;
-	height: 80%;
-	padding-top: 5%;
-	display: inline-block;
-	text-indent: -9999px
-}
-#tslogo{
-	background-image: url("images/ts_logo.png");
-	background-size: 100%;
-	background-repeat: no-repeat;
-	position: relative;
-	top: 10%;
-	width: 20%;
-	height: 40%;
-	left: -10%;
-	padding-top: 5%;
-	display: inline-block;
-	text-indent: -9999px;
-}
-#otlogo{
-	background-image: url("images/ot_logo.png");
-	background-size: 100%;
-	background-repeat: no-repeat;
-	position: relative;
-	top: 10%;
-	width: 20%;
-	height: 40%;
-	left: 10%;
-	padding-top: 5%;
-	display: inline-block;
-	text-indent: -9999px;
-}
+
+
